--- a/gnn_for_diabetes_env.yml
+++ b/gnn_for_diabetes_env.yml
@@ -1,39 +1,88 @@
 name: gnn_for_diabetes_env
 channels:
+  - bioconda
   - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
+  - _r-mutex=1.0.1=anacondar_1
+  - awscli=1.27.99=py311h38be061_0
+  - binutils_impl_linux-64=2.40=hf600244_0
   - blosc=1.21.3=hafa529b_0
+  - botocore=1.29.99=pyhd8ed1ab_0
+  - brotlipy=0.7.0=py311hd4cff14_1005
+  - bwidget=1.9.14=ha770c72_1
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
   - ca-certificates=2022.12.7=ha878542_0
+  - cairo=1.16.0=ha61ee94_1014
+  - certifi=2022.12.7=pyhd8ed1ab_0
+  - cffi=1.15.1=py311h409f033_3
+  - colorama=0.4.4=pyh9f0ad1d_0
+  - cryptography=40.0.1=py311h9b4c7bb_0
+  - curl=7.88.1=hdc1c0ab_1
+  - docutils=0.15.2=py311h38be061_6
+  - expat=2.5.0=h27087fc_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - freetype=2.12.1=hca18f0e_1
+  - fribidi=1.0.10=h36c2ea0_0
+  - gcc_impl_linux-64=12.2.0=hcc96c02_19
+  - gettext=0.21.1=h27087fc_0
+  - gfortran_impl_linux-64=12.2.0=h55be85b_19
+  - graphite2=1.3.13=h58526e2_1001
+  - gsl=2.7=he838d99_0
+  - gxx_impl_linux-64=12.2.0=hcc96c02_19
+  - harfbuzz=6.0.0=h8e241bc_0
   - hdf5=1.14.0=nompi_hb72d44e_103
+  - icu=70.1=h27087fc_0
+  - idna=3.4=pyhd8ed1ab_0
+  - jmespath=1.0.1=pyhd8ed1ab_0
+  - kernel-headers_linux-64=2.6.32=he073ed8_15
   - keyutils=1.6.1=h166bdaf_0
   - krb5=1.20.1=h81ceb04_0
   - ld_impl_linux-64=2.40=h41732ed_0
+  - lerc=4.0.0=h27087fc_0
   - libaec=1.0.6=hcb278e6_1
   - libblas=3.9.0=16_linux64_openblas
   - libcblas=3.9.0=16_linux64_openblas
   - libcurl=7.88.1=hdc1c0ab_1
+  - libdeflate=1.18=h0b41bf4_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=h516909a_1
   - libffi=3.4.2=h7f98852_5
+  - libgcc-devel_linux-64=12.2.0=h3b97bd3_19
   - libgcc-ng=12.2.0=h65d4601_19
   - libgfortran-ng=12.2.0=h69a702a_19
   - libgfortran5=12.2.0=h337968e_19
+  - libglib=2.74.1=h606061b_1
   - libgomp=12.2.0=h65d4601_19
+  - libiconv=1.17=h166bdaf_0
+  - libjpeg-turbo=2.1.5.1=h0b41bf4_0
   - liblapack=3.9.0=16_linux64_openblas
   - libnghttp2=1.52.0=h61bc06f_0
   - libnsl=2.0.0=h7f98852_0
   - libopenblas=0.3.21=pthreads_h78a6416_3
+  - libpng=1.6.39=h753d276_0
+  - libsanitizer=12.2.0=h46fd767_19
   - libsqlite=3.40.0=h753d276_0
   - libssh2=1.10.0=hf14f497_3
+  - libstdcxx-devel_linux-64=12.2.0=h3b97bd3_19
   - libstdcxx-ng=12.2.0=h46fd767_19
+  - libtiff=4.5.0=ha587672_6
   - libuuid=2.32.1=h7f98852_1000
+  - libwebp-base=1.3.0=h0b41bf4_0
+  - libxcb=1.13=h7f98852_1004
+  - libxml2=2.10.3=hca2bb57_4
   - libzlib=1.2.13=h166bdaf_4
   - lz4-c=1.9.4=hcb278e6_0
   - lzo=2.10=h516909a_1000
+  - make=4.3=hd18ef5c_1
   - ncurses=6.3=h27087fc_1
   - nomkl=1.0=h5ca1d4c_0
   - numexpr=2.8.3=py311hb519e60_101
@@ -41,18 +90,70 @@ dependencies:
   - openssl=3.1.0=h0b41bf4_0
   - packaging=23.0=pyhd8ed1ab_0
   - pandas=1.5.3=py311h2872171_0
+  - pango=1.50.14=hd33c08f_0
+  - pcre2=10.40=hc3806b6_0
   - pip=23.0.1=pyhd8ed1ab_0
+  - pixman=0.40.0=h36c2ea0_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - pyasn1=0.4.8=py_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pyopenssl=23.1.0=pyhd8ed1ab_0
+  - pysocks=1.7.1=pyha2e5f31_6
   - pytables=3.7.0=py311h938d375_4
   - python=3.11.0=he550d4f_1_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python_abi=3.11=3_cp311
   - pytz=2022.7.1=pyhd8ed1ab_0
+  - pyyaml=5.4.1=py311hd4cff14_4
+  - r=4.2=r42hd8ed1ab_1006
+  - r-base=4.2.3=h062c8ea_1
+  - r-boot=1.3_28.1=r42hc72bb7e_0
+  - r-class=7.3_21=r42h133d619_0
+  - r-cluster=2.1.4=r42h8da6f51_0
+  - r-codetools=0.2_19=r42hc72bb7e_0
+  - r-foreign=0.8_84=r42h133d619_0
+  - r-kernsmooth=2.23_20=r42hd009a43_1
+  - r-lattice=0.20_45=r42h06615bd_1
+  - r-mass=7.3_58.3=r42h133d619_0
+  - r-matrix=1.5_3=r42h5f7b363_0
+  - r-mgcv=1.8_42=r42he1ae0d6_0
+  - r-nlme=3.1_162=r42hac0b197_0
+  - r-nnet=7.3_18=r42h06615bd_1
+  - r-recommended=4.2=r42hd8ed1ab_1005
+  - r-rpart=4.1.19=r42h06615bd_0
+  - r-spatial=7.3_16=r42h133d619_0
+  - r-survival=3.5_5=r42h133d619_0
   - readline=8.2=h8228510_1
+  - rsa=4.7.2=pyh44b312d_0
+  - s3transfer=0.6.0=pyhd8ed1ab_0
+  - sed=4.8=he412f7d_0
   - setuptools=67.6.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.10=h9fff704_0
+  - sysroot_linux-64=2.12=he073ed8_15
   - tk=8.6.12=h27826a3_0
+  - tktable=2.10=hb7b940f_3
   - tzdata=2023b=h71feb2d_0
+  - urllib3=1.26.15=pyhd8ed1ab_0
   - wheel=0.40.0=pyhd8ed1ab_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.3=hd9c2040_1000
+  - xorg-libx11=1.8.4=h0b41bf4_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-libxt=1.2.1=h7f98852_2
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.6=h166bdaf_0
+  - yaml=0.2.5=h7f98852_2
+  - zlib=1.2.13=h166bdaf_4
   - zstd=1.5.2=h3eb15da_6
+  - pip:
+    - charset-normalizer==3.1.0
+    - lxml==4.9.2
+    - pywikipathways==0.0.2
+    - requests==2.28.2
