--- a/gnn_for_diabetes_env.yml
+++ b/gnn_for_diabetes_env.yml
@@ -19,8 +19,8 @@ dependencies:
   - certifi=2022.12.7=pyhd8ed1ab_0
   - cffi=1.15.1=py311h409f033_3
   - colorama=0.4.4=pyh9f0ad1d_0
-  - cryptography=40.0.1=py311h9b4c7bb_0
-  - curl=7.88.1=hdc1c0ab_1
+  - cryptography=40.0.2=py311h9b4c7bb_0
+  - curl=8.0.1=h588be90_0
   - docutils=0.15.2=py311h38be061_6
   - expat=2.5.0=h27087fc_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
@@ -32,6 +32,7 @@ dependencies:
   - fonts-conda-forge=1=0
   - freetype=2.12.1=hca18f0e_1
   - fribidi=1.0.10=h36c2ea0_0
+  - gatk=3.8=hdfd78af_11
   - gcc_impl_linux-64=12.2.0=hcc96c02_19
   - gettext=0.21.1=h27087fc_0
   - gfortran_impl_linux-64=12.2.0=h55be85b_19
@@ -43,6 +44,7 @@ dependencies:
   - icu=70.1=h27087fc_0
   - idna=3.4=pyhd8ed1ab_0
   - jmespath=1.0.1=pyhd8ed1ab_0
+  - jpeg=9e=h166bdaf_2
   - kernel-headers_linux-64=2.6.32=he073ed8_15
   - keyutils=1.6.1=h166bdaf_0
   - krb5=1.20.1=h81ceb04_0
@@ -51,8 +53,8 @@ dependencies:
   - libaec=1.0.6=hcb278e6_1
   - libblas=3.9.0=16_linux64_openblas
   - libcblas=3.9.0=16_linux64_openblas
-  - libcurl=7.88.1=hdc1c0ab_1
-  - libdeflate=1.18=h0b41bf4_0
+  - libcurl=8.0.1=h588be90_0
+  - libdeflate=1.13=h166bdaf_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=h516909a_1
   - libffi=3.4.2=h7f98852_5
@@ -63,7 +65,7 @@ dependencies:
   - libglib=2.74.1=h606061b_1
   - libgomp=12.2.0=h65d4601_19
   - libiconv=1.17=h166bdaf_0
-  - libjpeg-turbo=2.1.5.1=h0b41bf4_0
+  - libjpeg-turbo=2.1.4=h166bdaf_0
   - liblapack=3.9.0=16_linux64_openblas
   - libnghttp2=1.52.0=h61bc06f_0
   - libnsl=2.0.0=h7f98852_0
@@ -74,7 +76,7 @@ dependencies:
   - libssh2=1.10.0=hf14f497_3
   - libstdcxx-devel_linux-64=12.2.0=h3b97bd3_19
   - libstdcxx-ng=12.2.0=h46fd767_19
-  - libtiff=4.5.0=ha587672_6
+  - libtiff=4.4.0=h0e0dad5_3
   - libuuid=2.32.1=h7f98852_1000
   - libwebp-base=1.3.0=h0b41bf4_0
   - libxcb=1.13=h7f98852_1004
@@ -87,13 +89,16 @@ dependencies:
   - nomkl=1.0=h5ca1d4c_0
   - numexpr=2.8.3=py311hb519e60_101
   - numpy=1.24.2=py311h8e6699e_0
-  - openssl=3.1.0=h0b41bf4_0
+  - openjdk=8.0.332=h166bdaf_0
+  - openssl=3.1.0=hd590300_2
   - packaging=23.0=pyhd8ed1ab_0
   - pandas=1.5.3=py311h2872171_0
   - pango=1.50.14=hd33c08f_0
   - pcre2=10.40=hc3806b6_0
+  - perl=5.32.1=2_h7f98852_perl5
   - pip=23.0.1=pyhd8ed1ab_0
   - pixman=0.40.0=h36c2ea0_0
+  - polars=0.17.9=py311h46250e7_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - pyasn1=0.4.8=py_0
   - pycparser=2.21=pyhd8ed1ab_0
@@ -106,23 +111,56 @@ dependencies:
   - pytz=2022.7.1=pyhd8ed1ab_0
   - pyyaml=5.4.1=py311hd4cff14_4
   - r=4.2=r42hd8ed1ab_1006
-  - r-base=4.2.3=h062c8ea_1
+  - r-base=4.2.2=h6b4767f_2
+  - r-bitops=1.0_7=r42h06615bd_1
   - r-boot=1.3_28.1=r42hc72bb7e_0
+  - r-catools=1.18.2=r42h7525677_1
   - r-class=7.3_21=r42h133d619_0
+  - r-cli=3.6.1=r42h38f115c_0
   - r-cluster=2.1.4=r42h8da6f51_0
   - r-codetools=0.2_19=r42hc72bb7e_0
+  - r-colorspace=2.1_0=r42h133d619_0
+  - r-crayon=1.5.2=r42hc72bb7e_1
+  - r-ellipsis=0.3.2=r42h06615bd_1
+  - r-fansi=1.0.4=r42h133d619_0
+  - r-farver=2.1.1=r42h7525677_1
   - r-foreign=0.8_84=r42h133d619_0
+  - r-ggplot2=3.4.2=r42hc72bb7e_0
+  - r-glue=1.6.2=r42h06615bd_1
+  - r-gplots=3.1.3=r42hc72bb7e_1
+  - r-gsalib=2.2.1=r42hc72bb7e_1
+  - r-gtable=0.3.3=r42hc72bb7e_0
+  - r-gtools=3.9.4=r42h06615bd_0
+  - r-isoband=0.2.7=r42h38f115c_1
   - r-kernsmooth=2.23_20=r42hd009a43_1
+  - r-labeling=0.4.2=r42hc72bb7e_2
   - r-lattice=0.20_45=r42h06615bd_1
+  - r-lifecycle=1.0.3=r42hc72bb7e_1
+  - r-magrittr=2.0.3=r42h06615bd_1
   - r-mass=7.3_58.3=r42h133d619_0
   - r-matrix=1.5_3=r42h5f7b363_0
   - r-mgcv=1.8_42=r42he1ae0d6_0
+  - r-munsell=0.5.0=r42hc72bb7e_1005
   - r-nlme=3.1_162=r42hac0b197_0
   - r-nnet=7.3_18=r42h06615bd_1
+  - r-pillar=1.9.0=r42hc72bb7e_0
+  - r-pkgconfig=2.0.3=r42hc72bb7e_2
+  - r-plyr=1.8.8=r42h7525677_0
+  - r-r6=2.5.1=r42hc72bb7e_1
+  - r-rcolorbrewer=1.1_3=r42h785f33e_1
+  - r-rcpp=1.0.10=r42h38f115c_0
   - r-recommended=4.2=r42hd8ed1ab_1005
+  - r-reshape=0.8.9=r42hc72bb7e_1
+  - r-rlang=1.1.0=r42h38f115c_0
   - r-rpart=4.1.19=r42h06615bd_0
+  - r-scales=1.2.1=r42hc72bb7e_1
   - r-spatial=7.3_16=r42h133d619_0
   - r-survival=3.5_5=r42h133d619_0
+  - r-tibble=3.2.1=r42h133d619_1
+  - r-utf8=1.2.3=r42h133d619_0
+  - r-vctrs=0.6.2=r42ha503ecb_0
+  - r-viridislite=0.4.1=r42hc72bb7e_1
+  - r-withr=2.5.0=r42hc72bb7e_1
   - readline=8.2=h8228510_1
   - rsa=4.7.2=pyh44b312d_0
   - s3transfer=0.6.0=pyhd8ed1ab_0
